# aoc.rs

./: Cargo.toml
src/day0/: day0.rs
src/day1/: day1.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/lib/util/: util.rs
