[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"

[lib]
name = "util"
path = "src/lib/util/util.rs"
crate-type = ["lib"]

[[bin]]
name = "day1"
path = "src/bin/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/day4.rs"

[[bin]]
name = "day5"
path = "src/bin/day5/day5.rs"

[[bin]]
name = "day6"
path = "src/bin/day6/day6.rs"

[[bin]]
name = "day7"
path = "src/bin/day7/day7.rs"
