[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"

[lib]
name = "util"
path = "src/lib/util/util.rs"
crate-type = ["lib"]

[[bin]]
name = "day1"
path = "src/bin/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/day4.rs"

[[bin]]
name = "day5"
path = "src/bin/day5/day5.rs"

[[bin]]
name = "day6"
path = "src/bin/day6/day6.rs"

[[bin]]
name = "day7"
path = "src/bin/day7/day7.rs"

[[bin]]
name = "day8"
path = "src/bin/day8/day8.rs"

[[bin]]
name = "day9"
path = "src/bin/day9/day9.rs"

[[bin]]
name = "day10"
path = "src/bin/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/day12/day12.rs"

[[bin]]
name = "day13"
path = "src/bin/day13/day13.rs"

[[bin]]
name = "day14"
path = "src/bin/day14/day14.rs"
