[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"

[lib]
name = "util"
path = "src/lib/util/util.rs"
crate-type = ["lib"]

# 2024!

[[bin]]
name = "2024_day1"
path = "src/bin/2024/day1/day1.rs"

[[bin]]
name = "2024_day2"
path = "src/bin/2024/day2/day2.rs"

[[bin]]
name = "2024_day3"
path = "src/bin/2024/day3/day3.rs"

[[bin]]
name = "2024_day4"
path = "src/bin/2024/day4/day4.rs"

[[bin]]
name = "2024_day5"
path = "src/bin/2024/day5/day5.rs"

[[bin]]
name = "2024_day6"
path = "src/bin/2024/day6/day6.rs"

[[bin]]
name = "2024_day7"
path = "src/bin/2024/day7/day7.rs"

[[bin]]
name = "2024_day8"
path = "src/bin/2024/day8/day8.rs"

[[bin]]
name = "2024_day9"
path = "src/bin/2024/day9/day9.rs"

[[bin]]
name = "2024_day10"
path = "src/bin/2024/day10/day10.rs"

[[bin]]
name = "2024_day11"
path = "src/bin/2024/day11/day11.rs"

[[bin]]
name = "2024_day12"
path = "src/bin/2024/day12/day12.rs"

[[bin]]
name = "2024_day13"
path = "src/bin/2024/day13/day13.rs"

[[bin]]
name = "2024_day14"
path = "src/bin/2024/day14/day14.rs"

[[bin]]
name = "2024_day15"
path = "src/bin/2024/day15/day15.rs"

[[bin]]
name = "2024_day16"
path = "src/bin/2024/day16/day16.rs"

# 2025!

[[bin]]
name = "2025_day1"
path = "src/bin/2025/day1/day1.rs"

[[bin]]
name = "2025_day2"
path = "src/bin/2025/day2/day2.rs"

[[bin]]
name = "2025_day3"
path = "src/bin/2025/day3/day3.rs"

[[bin]]
name = "2025_day4"
path = "src/bin/2025/day4/day4.rs"
